This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - xls exports: add column reordering
          - action menus: add close_timeout option
          - downtimes: verify if end date is after start date
          - logcache:
            - performance improvements for the import and update commands
            - fix notifications filter by contact_name
          - Business Process:
            - add input/output filter
            - make references link recursive
            - performance improvements for service status nodes
            - add optional operator for status aggregation
          - fix issue when mobile plugin is disabled (#731)

2.14-2   Fri May  5 12:31:42 CEST 2017
          - autocomplete custom variables values if exposed by show_custom_vars
          - make custom variables available in host/service excel export
          - write details into apache log on timeouts
          - make contacts email address available in enviroment for hooks and scripts
          - action menus: support confirmation dialogs
          - logcache:
            - performance improvements for the logcacheclean command
          - fix filtering for empty custom variables
          - fix problems favicon counter

2.14     Tue Mar 28 10:09:25 CEST 2017
          - add new Thruk2 theme
          - add broadcast system
          - support opening server actions in new tabs
          - support service lists for recurring downtimes
          - fix livestatus "Operator !~~ for lists not implemented." issue when having an empty search filter
          - set contactgroups as REMOTE_USER_GROUPS into the environment for hooks and scripts
          - add basic filters to notifications page (#692)
          - fix macro expansion with recursive args (#658)
          - fix forcing logcache to myisam (#691)
          - fix login hook not running in background
          - Business Process: