@@ -5,7 +5,7 @@
 [% FOREACH n = broadcasts %]
 <div class="broadcast"[% IF !loop.first %] style="display: none;"[% END %]>[% n.text %]</div>
 [% END %]
-<div class="dismiss"><a href="#" onclick="broadcast_dismiss(); return(false);">dismiss</a></div>
+[% IF c.user_exists %]<div class="dismiss"><a href="#" onclick="broadcast_dismiss(); return(false);">dismiss</a></div>[% END %]
 <div class="controls">
   <button class="previous" style="visibility: hidden;" onclick="broadcast_show_list(-1);"></button>
   <button class="next"[% IF broadcasts.size == 1 %] style="visibility: hidden;"[% END %] onclick="broadcast_show_list(1);"></button>
