@@ -4,6 +4,7 @@ next:
           - xls exports: add column reordering
           - action menus: add close_timeout option
           - downtimes: verify if end date is after start date
+          - broadcasts: show broadcasts optionally on the login page
           - logcache:
             - performance improvements for the import and update commands
             - fix notifications filter by contact_name
